hphp/test/zend/bad/zend/heredoc_005.php.expectf
Parse error: %s in %sheredoc_005.php on line 6